--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,11 +6,10 @@ body {
 }
 
 .container {
-  clear: both
+  clear: both;
 }
 
 .category-container {
-  //display: inline-block;
   float: left;
   width: 50%;
 }
@@ -19,5 +18,4 @@ body {
   background-color: $task-bg-color;
   width: 50%;
   float: right;
-  //display: inline-block
 }
