--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -13,9 +13,10 @@ body {
 }
 
 .app-container {
-  border: 1px solid gray;
-  width: 50%;
-  min-height: 100px;
+  border: 2px solid black;
+  //background-color: #eff4fd;
+  width: 75%;
+  min-height: 500px;
   margin: 0 auto;
   text-align: left;
 }
@@ -26,10 +27,11 @@ body {
 }
 
 .task-container {
-  background-color: $task-bg-color;
+  //background-color: $task-bg-color;
+  //border-left: 1px solid gray;
   width: 50%;
   float: right;
-  height: 100px;
+  //height: inherit;
 }
 
 //add to container after floats
@@ -40,4 +42,8 @@ body {
       content: "";
       clear: both;
       height: 0;
+}
+
+.category-entry {
+  padding: 5px;
 }
