[refactor] form location and styling

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -46,4 +46,15 @@ body {
 
 .category-entry {
   padding: 5px;
+  //position: absolute;
+}
+
+.category-form-button {
+  position: absolute;
+  top: 470px;
+  //padding: 20px;
+}
+
+.category-form-button-container {
+  padding: 0 20px;
 }
