[feat] delete category

--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,4 +1,4 @@
-$font-stack:    Helvetica, sans-serif;
+$font-stack: Verdana, Geneva, sans-serif;
 $primary-color: #333;
 $primary-blue: blue;
 $task-bg-color: #eff5f5;
